<resources>
    <string name="app_name">InnovationFactoryTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find">Find</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="multi_city">multi-city</string>
    <string name="trip_class">Class</string>
    <string name="from">From</string>
    <string name="dubai">Dubai (DBX)</string>
    <string name="mumbai_bom">Mumbai (BOM)</string>
</resources>