<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/one_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/tab_layout"
                android:elevation="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/one_way"

                />

            <TextView
                android:id="@+id/round_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/tab_layout"
                android:elevation="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/round_trip"

                />

            <TextView
                android:id="@+id/multi_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/tab_layout"
                android:elevation="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/multi_city"

                />

            <TextView
                android:id="@+id/Class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/tab_layout"
                android:drawableEnd="@drawable/fligth_menu"
                android:elevation="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/trip_class"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/trip_layout"
            android:backgroundTint="@color/blue"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/from"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:drawableStart="@drawable/fligth_from"
                android:padding="@dimen/_1sdp"
                android:text="@string/dubai"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"

                />


            <TextView
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:text="to"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                android:textStyle="bold"


                />

            <TextView
                android:id="@+id/tv_to_country"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:drawableStart="@drawable/flight_to"
                android:padding="@dimen/_13sdp"
                android:text="@string/mumbai_bom"
                android:textAllCaps="false"
                android:textColor="@color/white"

                android:textSize="@dimen/_10sdp"

                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/trip_layout"
            android:elevation="@dimen/_10sdp"


            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/departure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Departure"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:textStyle="bold"
                   />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sat2,Sep"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:drawableStart="@drawable/calender"
                    android:layout_margin="@dimen/_5sdp"



                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/return_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="return"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_20sdp"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sun24,Sep"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:drawableStart="@drawable/calender"
                    android:layout_margin="@dimen/_5sdp"


                    />

            </LinearLayout>

        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:background="@drawable/trip_layout"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"


        >



<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:src="@drawable/person_trip"



    />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/trip_layout"



                >
                <TextView
                    android:id="@+id/passenger_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Passenger"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_20sdp"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2 Adults,1 Child"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:layout_margin="@dimen/_5sdp"


                    />


            </LinearLayout>




            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                android:layout_gravity="center"




                />



        </LinearLayout>


    </LinearLayout>
